[package]
name = "dbus-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.5"
xml-rs = "0.8.4"
clap = "2.33.3"
log = "0.4"
simple_logger = "1.13"
itertools = "0.10"
regex = "1.5.4"
nom = "7"
pest = "2.0"
pest_derive = "2.0"